[package]
name = "rss"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
flume = "0.11.0"
league-client = { version = "0.1.1" }
rand = "0.8.5"
reqwest = { version = "0.11.25", features = ["stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
