[package]
name = "rss"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
env_logger = "0.11.3"
flume = "0.11.0"
league-client = { version = "0.2.0" }
log = "0.4.21"
rand = "0.8.5"
reqwest = { version = "0.11.25", features = ["stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
